# pdf2html

./: .dockerignore  .editorconfig  .gitignore  Brewfile  Brewfile.lock.json  Makefile  README.md  docker-compose.yml  go.mod  go.sum  locals.json  samconfig.toml  template.yaml
lambda-node/: Dockerfile  entrypoint.sh
pdf2html/: CMakeLists.txt  Dockerfile  build.sh  package-lock.json
pdf2html-lambda/: Dockerfile  main.go
pdf2html-lambda/internal/: config.go  generate.go  handler.go  s3.go  utils.go
pdf2html/libs/: CMakeLists.txt  build.sh
pdf2html/share/: base.css.in  build_css.sh  manifest
pdf2html/src/: ArgParser.h  DrawingTracer.cc  HTMLState.h  Preprocessor.cc  pdf2htmlEX-config.h.in  pdf2htmlEX.cc
pdf2html/src/HTMLRenderer/: HTMLRenderer.h  font.cc  form.cc  general.cc  link.cc  outline.cc  state.cc  text.cc
pdf2html/src/util/: SignalHandler.cc  const.h  ffw.c
